maze.lessons.maze.island.IslandMaze.scala.error
Escaper:25: error: variable direction in class AbstractBuggle cannot be accessed in plm.runtime19.Escaper
	setDirection(direction.NORD)
                     ^